[package]
name = "Dataset-Editor"
version = "0.1.0"
edition = "2021"


[dependencies]
eframe = "0.24"
egui = "0.24"
image = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
winapi = { version = "0.3", features = ["winuser", "windef"] }
rfd = "0.13.0"
parking_lot = "0.12.3"
rayon = "1.8"