[package]
name = "Dataset-Editor"
version = "0.1.0"
edition = "2021"
authors = ["ShedTheSkin"]

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
image = "0.25.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
winapi = { version = "0.3", features = ["winuser", "windef"] }
rfd = "0.15.1"
parking_lot = "0.12.3"
rayon = "1.8"